change "app" to "us cross borders"

--- a/discount.html
+++ b/discount.html
@@ -22,7 +22,7 @@
     <li><a href="how.html" target="_self">How It Works</a></li>
     <li><a href="enroll.html" target="_self">Enroll Now</a></li>
     <li><a href="discount.html" target="_self">Discounts</a></li>
-    <li><a href="app.html" target="_self">Visa SavingsEdge App</a></li>
+    <li><a href="#" target="_self">US Cross Border</a></li>
     <li class="lastrow"><a href="" target="_self">Sign Out</a></li>
   </ul>
 </div>
@@ -45,7 +45,7 @@
         <li><a href="how.html" target="_self">How It Works</a></li>
         <li><a href="enroll.html" target="_self">Enroll Now</a></li>
         <li><a class="current" href="discount.html" target="_self">Discounts</a></li>
-        <li><a href="app.html" target="_self">Visa SavingsEdge App</a></li>
+        <li><a href="#" target="_self">US Cross Border</a></li>
       </ul>
     </div>
     <!--Discount hero slider-->
