added language toggle

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
           </li>
           <li><a class="global_blue" href="#">Sign In</a></li>
           <li><a class="global_blue" href="#">My Account</a></li>
+          <li> <a href="#" class="language_toggle" id="french">Fran&ccedil;ais</a></li>
         </ul>
+       
       </div>
       <div class="global_search_icon"><img src="images/search_icon.gif"></div>
       <ul class="global_navigation">
