--- a/enroll.html
+++ b/enroll.html
@@ -50,7 +50,9 @@
     </div>
     <div class="enroll_gradiant_mobile">
       <h1>Enroll now for free</h1>
-      <p>Get automatic business savings* with Visa SavingsEdge<sup>&reg;</sup>. It takes just a few moments to complete the form on the right. Then watch your savings add up as credits on your future account statements.</p>
+      <p>Get automatic business savings* with Visa SavingsEdge<sup>&reg;</sup>. It takes just a few moments to complete the form on the right. Then watch your savings add up as credits on your future account statements.<br><br>
+<a href="javascript:;">Is your card eligible?</a></p>
+      
     </div>
     <div class="enroll_sidebar">
       <h1>Fill out the form below</h1>
@@ -147,7 +149,8 @@
     </div>
     <div class="enroll_gradiant">
       <h1>Enroll now for free</h1>
-      <p>Get automatic business savings* with Visa SavingsEdge<sup>&reg;</sup>. It takes just a few moments to complete the form on the right. Then watch your savings add up as credits on your future account statements.</p>
+      <p>Get automatic business savings* with Visa SavingsEdge<sup>&reg;</sup>. It takes just a few moments to complete the form on the right. Then watch your savings add up as credits on your future account statements.<br><br>
+<a href="javascript:;">Is your card eligible?</a></p>
     </div>
     <p class="enroll_gradiant_legal">* Savings provided as credits on future account statements.</p>
     <div class="enroll_merchants">
@@ -155,13 +158,28 @@
       <p>After you receive enrollment confirmation, use your enrolled card to make <a href="#" target="_self">qualifying purchases</a> at merchants like these:</p>
       <div class="enroll_merchants_logos"> <img src="images/icon_2.gif" alt=""><img src="images/icon_3.gif" alt=""><img src="images/icon_3.gif" alt=""><img src="images/icon_4.gif" alt=""><img src="images/icon_2.gif" alt=""><img src="images/icon_3.gif" alt=""><img src="images/icon_3.gif" alt=""><img src="images/icon_4.gif" alt=""><img src="images/icon_2.gif" alt=""><img src="images/icon_3.gif" alt=""><img src="images/icon_3.gif" alt=""><img src="images/icon_4.gif" alt=""><img src="images/icon_2.gif" alt=""><img src="images/icon_3.gif" alt=""><img src="images/icon_3.gif" alt=""> </div>
       <a href="discount.html" class="app_button-blue">view all discounts</a> </div>
-    <div class="enroll_download_apps"> <img src="images/signin_map.gif" alt="">
+   <!-- <div class="enroll_download_apps"> <img src="images/signin_map.gif" alt="">
       <div class="enroll_download_apps_content">
         <h1>Introducing the Visa SavingsEdge mobile app</h1>
         <h2>Searching is simple. Saving is automatic.</h2>
         <p>Your business goes where you go. So does Visa SavingsEdge<sup>&reg;</sup>. Find places to shop and save money — wherever you are.</p>
         <a href="https://itunes.apple.com/us/app/visa-savingsedge/id781935452?mt=8e" class="app_button-blue"><img src="images/signin_apple.png" alt="">download for iOS</a><a href="https://play.google.com/store/apps/details?id=com.savingsedge&hl=en" class="app_button-blue"><img src="images/signin_android.png" alt="">download for Android</a><br>
         <p class="legal">* Savings provided as credits on future account statements.</p>
+      </div>
+    </div>-->
+   <div class="home_business_savings" style="border-top:1px solid #CCC; top:50px; position:relative;">
+    <div class="shared_eligible"><br>
+        <h1>See if you&rsquo;re eligible</h1>
+        <p>Enter the first six digits of your Visa Business card to verify that your card is currently eligible to enroll in Visa SavingsEdge. It’s easy and secure. </p>
+        <a class="shared_eligible_link" href="#" target="_blank">Is this safe?</a><br>
+        <a class="shared_eligible_link" href="#" target="_blank">Why do I need to enter my card number?</a><br>
+        <input id="cardnum" class="shared_eligible_card_num" type="text" title="Card Number" maxlength="16" name="xccard" value="" tabindex="18">
+        <div>
+          <input id="chkTermsOpt" class="shared_eligible_checkbox" type="checkbox" value="t" title="Terms And Conditions" name="xtermsread" tabindex="45">
+          <label id="terms_opt_label" for="terms_opt">I understand that my Visa card account number will be used to determine program eligibility. If my Visa card is ineligible for the program, Visa may share aggregated information about my Visa card with the issuer of my Visa card; provided, however, that the information shared will not personally identify me as a cardholder. For more information, please see the <a class="shared_terms_opt_link" href="#" target="_blank">Visa SavingsEdge privacy policy</a>.</label>
+          <br>
+          <a href="#" class="app_button-blue">submit</a> </div>
+        <div class="shared_eligible_image"><img src="images/home_eligible.jpg" alt=""></div>
       </div>
     </div>
   </div>
@@ -173,9 +191,9 @@
   <div class="global_wrapper-footer">
     <div class="global_footer">
       <div class="global_flt global_footer-left"> <img src="images/footer-visa.png" width="192" height="31" alt="" /> </div>
-      <div class="global_frt global_footer-right">
+     <div class="global_frt global_footer-right">
         <ul>
-          <li class="global_social-list-border global_social-list-height">
+          <!--<li class="global_social-list-border global_social-list-height">
             <ul>
               <li class="global_social-sublist-padding-left global_social-sublist-padding-right global_social-sublist-block">
                 <h6>Follow</h6>
@@ -183,8 +201,8 @@
               <li class="global_social-sublist-padding-right"><a class="global_link-facebook" href="https://www.facebook.com/visasmallbiz" target="_blank">Facebook</a></li>
               <li class="global_social-sublist-padding-right"><a class="global_link-twitter" href="https://twitter.com/VisaSmallBiz" target="_blank">Twitter</a></li>
             </ul>
-          </li>
-          <li class="global_social-list-border global_social-list-height">
+          </li>-->
+          <li class="global_social-list-border global_social-list-height" style="border:none;">
             <ul>
               <li class="global_social-sublist-padding-left global_social-sublist-padding-right global_social-sublist-block">
                 <h6 class="mobile">Share</h6>
@@ -194,15 +212,7 @@
               <li class="global_social-sublist-padding-right"><a class="global_link-twitter" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fvisasavingsedge.com%2Fmembers%2Fhome.php%3Fsid%3D92XXdKrlo92&text=Save%20up%20to%2015%25%20with%20Visa%20SavingsEdge%C2%AE.%20Enrollment%20is%20free%3B%20enroll%20your%20eligible%20Visa%20Business%20card%20today.&tw_p=tweetbutton&url=http%3A%2F%2Fwww.afssn.com%2Fafssn.php%3Fc%3D92%26a%3D" target="_blank">Twitter</a></li>
             </ul>
           </li>
-          <li class="global_social-list-height">
-            <ul>
-              <li class="global_social-sublist-padding-left global_social-sublist-padding-right global_social-sublist-block">
-                <h6>Download App</h6>
-              </li>
-              <li class="global_social-sublist-padding-right"><a class="global_link-ios" href="https://itunes.apple.com/us/app/visa-savingsedge/id781935452?mt=8e" target="_blank">iOS</a></li>
-              <li><a class="global_link-android" href="https://play.google.com/store/apps/details?id=com.savingsedge&hl=en" target="_blank">Android</a></li>
-            </ul>
-          </li>
+          
         </ul>
         <div class="global_clr"></div>
       </div>
@@ -221,7 +231,7 @@
           <li><a href="http://www.facebook.com/visasmallbiz" target="_blank">Well Sourced by Visa Business</a></li>
         </ul>
       </div>
-      <div class="global_subfooter-right global_frt"> &copy; Copyright 2008-2014 Visa. All Rights Reserved. </div>
+      <div class="global_subfooter-right global_frt"> &copy; Copyright 2008-2015 Visa. All Rights Reserved. </div>
       <div class="global_clr"></div>
     </div>
   </div>
