--- a/myaccount.html
+++ b/myaccount.html
@@ -31,7 +31,7 @@
   <div class="global_content">
     <div class="global_header">
       <h1 class="global_flt global_logo"><a href="index.html" target="_self">Visa SavingsEdge</a></h1>
-      <a class="signInLink" href="#" target="_self">Sign Out</a>
+      <!--<a class="signInLink" href="#" target="_self">Sign Out</a>-->
       <div class="global_mobile-hide global_frt global_search">
         <ul>
           <li class="search">
@@ -371,7 +371,7 @@
             </div>
           </div>
         </div>
-        <div id="444444" class="accordion_cat ">
+        <!--<div id="444444" class="accordion_cat ">
           <div class="accordion_cat_header no_border">
             <h2>Terms and Conditions</h2>
           </div>
@@ -479,10 +479,10 @@ By enrolling in the Program, the Business and each Cardholder hereby release Vis
               </div>
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
-    <div class="signin_feat_discount">
+  <!--  <div class="signin_feat_discount">
       <div id="2" class="global_merchant_id">
         <div class="signin_feat_discount_header">
           <p>Featured Discount</p>
@@ -516,7 +516,7 @@ By enrolling in the Program, the Business and each Cardholder hereby release Vis
         <p class="legal">* Savings provided as credits on future account statements.</p>
       </div>
     </div>
-  </div>
+  </div>-->
   <div class="app_wrapper-shop global_desktop-hide">
     <div class="app_shop">
       <h4>Start saving automatically</h4>
