--- a/video.html
+++ b/video.html
@@ -33,14 +33,16 @@
   <div class="global_content">
     <div class="global_header">
       <h1 class="global_flt global_logo">Visa SavingsEdge</h1>
-      <div class="global_mobile-hide global_frt global_search">
+       <div class="global_mobile-hide global_frt global_search">
         <ul>
           <li class="search">
             <input id="keyword" class="textual default" type="text" title="Search" name="xretailer" value="Search" tabindex="1">
           </li>
           <li><a class="global_blue" href="#">Sign In</a></li>
-          <li><a class="global_blue" href="#">My Account</a></li>
+          <!--<li><a class="global_blue" href="#">My Account</a></li>-->
+          <li> <a href="#" class="language_toggle" id="french">Fran&ccedil;ais</a></li>
         </ul>
+       
       </div>
       <div class="global_search_icon"><img src="images/search_icon.gif"></div>
       <ul class="global_navigation">
@@ -88,9 +90,9 @@
   <div class="global_wrapper-footer">
     <div class="global_footer">
       <div class="global_flt global_footer-left"> <img src="images/footer-visa.png" width="192" height="31" alt="" /> </div>
-      <div class="global_frt global_footer-right">
+     <div class="global_frt global_footer-right">
         <ul>
-          <li class="global_social-list-border global_social-list-height">
+          <!--<li class="global_social-list-border global_social-list-height">
             <ul>
               <li class="global_social-sublist-padding-left global_social-sublist-padding-right global_social-sublist-block">
                 <h6>Follow</h6>
@@ -98,8 +100,8 @@
               <li class="global_social-sublist-padding-right"><a class="global_link-facebook" href="https://www.facebook.com/visasmallbiz" target="_blank">Facebook</a></li>
               <li class="global_social-sublist-padding-right"><a class="global_link-twitter" href="https://twitter.com/VisaSmallBiz" target="_blank">Twitter</a></li>
             </ul>
-          </li>
-          <li class="global_social-list-border global_social-list-height">
+          </li>-->
+          <li class="global_social-list-border global_social-list-height" style="border:none;">
             <ul>
               <li class="global_social-sublist-padding-left global_social-sublist-padding-right global_social-sublist-block">
                 <h6 class="mobile">Share</h6>
@@ -109,15 +111,7 @@
               <li class="global_social-sublist-padding-right"><a class="global_link-twitter" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fvisasavingsedge.com%2Fmembers%2Fhome.php%3Fsid%3D92XXdKrlo92&text=Save%20up%20to%2015%25%20with%20Visa%20SavingsEdge%C2%AE.%20Enrollment%20is%20free%3B%20enroll%20your%20eligible%20Visa%20Business%20card%20today.&tw_p=tweetbutton&url=http%3A%2F%2Fwww.afssn.com%2Fafssn.php%3Fc%3D92%26a%3D" target="_blank">Twitter</a></li>
             </ul>
           </li>
-          <li class="global_social-list-height">
-            <ul>
-              <li class="global_social-sublist-padding-left global_social-sublist-padding-right global_social-sublist-block">
-                <h6>Download App</h6>
-              </li>
-              <li class="global_social-sublist-padding-right"><a class="global_link-ios" href="https://itunes.apple.com/us/app/visa-savingsedge/id781935452?mt=8e" target="_blank">iOS</a></li>
-              <li><a class="global_link-android" href="https://play.google.com/store/apps/details?id=com.savingsedge&hl=en" target="_blank">Android</a></li>
-            </ul>
-          </li>
+          
         </ul>
         <div class="global_clr"></div>
       </div>
@@ -136,7 +130,7 @@
           <li><a href="http://www.facebook.com/visasmallbiz" target="_blank">Well Sourced by Visa Business</a></li>
         </ul>
       </div>
-      <div class="global_subfooter-right global_frt"> &copy; Copyright 2008-2014 Visa. All Rights Reserved. </div>
+      <div class="global_subfooter-right global_frt"> &copy; Copyright 2008-2015 Visa. All Rights Reserved. </div>
       <div class="global_clr"></div>
     </div>
   </div>
